fixed some layout issues where the price was extending past the card in specials

--- a/src/specials.css
+++ b/src/specials.css
@@ -6,7 +6,7 @@
 }
 
 .specials-card {
-    width: 70%;
+    width: 90%;
     gap: 2rem;
     flex-direction: column;
     text-align: start;
@@ -59,6 +59,12 @@ a {
     height: 2rem;
     width: auto;
     margin-left: 1rem;
+}
+
+@media (min-width: 400px) {
+    .specials-card {
+        width: 70%;
+    }
 }
 
 @media (min-width: 1200px) {
